--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "Other"
   ],
   "activationEvents": [
-    "*"
+    "onCommand:code-roast.start",
+    "onCommand:code-roast.viewSummary"
   ],
   "main": "./out/extension.js",
   "contributes": {
